--- a/merrick-js-v1/index.html
+++ b/merrick-js-v1/index.html
@@ -27,10 +27,14 @@
        ====================================================================-->
             <section class="citrus_purebits_banner-area">
                 <div class="citrus_purebits_container">
-                    <div class="citrus_purebits__slider citrus_pureBites_carousel">
-                        <div class="citrus_purebits__slides citrus_pureBites_carousel-inner">
+                    <div class="citrus_purebits__slider">
+                        <div class="citrus_purebits__slides">
+                            <!-- Radio buttons -->
+                            <input type="radio" name="radio-btn" id="radio1" />
+                            <input type="radio" name="radio-btn" id="radio2" />
+                            <input type="radio" name="radio-btn" id="radio3" />
                             <!-- slide 1 -->
-                            <div class="citrus_purebits__slider--content citrus_purebits_slide citrus_purebits_first citrus_pureBites_carousel-item">
+                            <div class="citrus_purebits__slider--content citrus_purebits_slide citrus_purebits_first">
                                 <div class="citrus_purebits-single-item">
                                     <div class="citrus_purebits_slider-banner-img">
                                         <img class="citrus_purebits_mobile_hide" src="assets/images/banner1.png" alt="PureBites logo. Simple, pure ingredients. Crafted with recognizable ingredients that pet parents can trust" />
@@ -56,7 +60,7 @@
                                 </div>
                             </div>
                             <!-- slide 2 -->
-                            <div class="citrus_purebits__slider--content citrus_purebits_slide citrus_pureBites_carousel-item">
+                            <div class="citrus_purebits__slider--content citrus_purebits_slide">
                                 <div class="citrus_purebits-single-item">
                                     <div class="citrus_purebits_slider-banner-img">
                                         <img class="citrus_purebits_mobile_hide" src="assets/images/banner2.png" alt="PureBites logo. Made fresh and pure. Essential vitamins, nutrients and minerals packed into every bag" />
@@ -82,7 +86,7 @@
                                 </div>
                             </div>
                             <!-- slide 3 -->
-                            <div class="citrus_purebits__slider--content citrus_purebits_slide citrus_pureBites_carousel-item">
+                            <div class="citrus_purebits__slider--content citrus_purebits_slide">
                                 <div class="citrus_purebits-single-item">
                                     <div class="citrus_purebits_slider-banner-img">
                                         <img class="citrus_purebits_mobile_hide" src="assets/images/banner3.png" alt="PureBites logo. Taste dogs and cats love. Delicious recipes that will captivate your pet’s senses." />
@@ -107,12 +111,25 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Auto navigation -->
+                            <div class="citrus_purebitsnavigation-auto">
+                                <!-- <img src="img/nav-icon.png" /> -->
+                                <div class="citrus_purebitsauto-btn1"></div>
+                                <div class="citrus_purebitsauto-btn2"></div>
+                                <div class="citrus_purebitsauto-btn3"></div>
+                            </div>
+                            <div class="citrus_purebitsnavigation-manual">
+                                <label for="radio1" class="citrus_purebitsmanual-btn"></label>
+                                <label for="radio2" class="citrus_purebitsmanual-btn"></label>
+                                <label for="radio3" class="citrus_purebitsmanual-btn"></label>
+                            </div>
                         </div>
-                        <div class="citrus_pureBites_carousel-controls">
-                            <span class="prev"></span>
-                            <span class="next"></span>
+                        <!-- Manual navigation -->
+                        <div class="citrus_purebitsnavigation-manual" style="display: none;">
+                            <label for="radio1" class="citrus_purebitsmanual-btn"></label>
+                            <label for="radio2" class="citrus_purebitsmanual-btn"></label>
+                            <label for="radio3" class="citrus_purebitsmanual-btn"></label>
                         </div>
-                        <div class="citrus_pureBites_carousel-indicators"></div>
                     </div>
                 </div>
             </section>
@@ -554,6 +571,17 @@
    ====================================================================-->
         </div>
 
+        <script>
+            //slider script
+            let counter = 1;
+            setInterval(function () {
+                document.getElementById("radio" + counter).checked = true;
+                counter++;
+                if (counter > 3) {
+                    counter = 1;
+                }
+            }, 5000);
+        </script>
         <!-- Merrick Gold brand page -->
         <script type="text/javascript">
             // start parent tab cat & dog js //
@@ -699,178 +727,6 @@
                     this.className += " MiCS_cat_food_tab_citrus21_active_citrus21_purebites";
                 });
             }
-
-            // Slider scripts Raw JS
-
-            let citrus_pureBites_carousel = document.querySelector('.citrus_pureBites_carousel');
-
-            let citrus_pureBites_carouselInner = document.querySelector('.citrus_pureBites_carousel-inner');
-
-            let prev = document.querySelector('.citrus_pureBites_carousel-controls .prev');
-
-            let next = document.querySelector('.citrus_pureBites_carousel-controls .next');
-
-            let slides =  document.querySelectorAll('.citrus_pureBites_carousel-inner .citrus_pureBites_carousel-item');
-
-            let totalSlides = slides.length;
-
-            let step = 100 / totalSlides;
-
-            let activeSlide = 0;
-
-            let activeIndicator = 0;
-
-            let direction = -1;
-
-            let jump = 1;
-
-            let interval = 20000;
-
-            let time;
-
-
-
-            //Init citrus_pureBites_carousel
-            citrus_pureBites_carouselInner.style.minWidth = (totalSlides * 100) + '%';
-            loadIndicators();
-            loop(true);
-
-
-            //citrus_pureBites_carousel events
-
-            next.addEventListener('click',()=>{
-                slideToNext();
-            });
-
-            prev.addEventListener('click',()=>{
-                slideToPrev();
-            });
-
-            citrus_pureBites_carouselInner.addEventListener('transitionend',()=>{
-                if(direction === -1){
-                    if(jump > 1){
-                        for(let i = 0; i < jump; i++){
-                            activeSlide++;
-                            citrus_pureBites_carouselInner.append(citrus_pureBites_carouselInner.firstElementChild);
-                        }
-                    }else{
-                        activeSlide++;
-                        citrus_pureBites_carouselInner.append(citrus_pureBites_carouselInner.firstElementChild);
-                    }
-                }else if(direction === 1){
-                    if(jump > 1){
-                        for(let i = 0; i < jump; i++){
-                            activeSlide--;
-                            citrus_pureBites_carouselInner.prepend(citrus_pureBites_carouselInner.lastElementChild);
-                        }
-                    }else{
-                        activeSlide--;
-                        citrus_pureBites_carouselInner.prepend(citrus_pureBites_carouselInner.lastElementChild);
-                    }
-                };
-
-                citrus_pureBites_carouselInner.style.transition = 'none';
-                citrus_pureBites_carouselInner.style.transform = 'translateX(0%)';
-                setTimeout(()=>{
-                    jump = 1;
-                    citrus_pureBites_carouselInner.style.transition = 'all ease .5s';
-                });
-                updateIndicators();
-            });
-
-            document.querySelectorAll('.citrus_pureBites_carousel-indicators span').forEach(item=>{
-                item.addEventListener('click',(e)=>{
-                    let slideTo = parseInt(e.target.dataset.slideTo);
-                    
-                    let indicators = document.querySelectorAll('.citrus_pureBites_carousel-indicators span');
-
-                    indicators.forEach((item,index)=>{
-                        if(item.classList.contains('active')){
-                            activeIndicator = index
-                        }
-                    })
-
-                    if(slideTo - activeIndicator > 1){
-                        jump = slideTo - activeIndicator;
-                        step = jump * step;
-                        slideToNext();
-                    }else if(slideTo - activeIndicator === 1){
-                        slideToNext();
-                    }else if(slideTo - activeIndicator < 0){
-
-                        if(Math.abs(slideTo - activeIndicator) > 1){
-                            jump = Math.abs(slideTo - activeIndicator);
-                            step = jump * step;
-                            slideToPrev();
-                        }
-                            slideToPrev();
-                    }
-                    step = 100 / totalSlides; 
-                })
-            });
-
-            citrus_pureBites_carousel.addEventListener('mouseover',()=>{
-                loop(false);
-            })
-
-            citrus_pureBites_carousel.addEventListener('mouseout',()=>{
-                loop(true);
-            })
-
-            //citrus_pureBites_carousel functions
-
-            function loadIndicators(){
-                slides.forEach((slide,index)=>{
-                    if(index === 0){
-                        document.querySelector('.citrus_pureBites_carousel-indicators').innerHTML +=
-                        `<span data-slide-to="${index}" class="active"></span>`;
-                    }else{
-                        document.querySelector('.citrus_pureBites_carousel-indicators').innerHTML +=
-                        `<span data-slide-to="${index}"></span>`;
-                    }
-                }); 
-            };
-
-            function updateIndicators(){
-                if(activeSlide > (totalSlides - 1)){
-                    activeSlide = 0;
-                }else if(activeSlide < 0){
-                    activeSlide = (totalSlides - 1);
-                }
-                document.querySelector('.citrus_pureBites_carousel-indicators span.active').classList.remove('active');
-                document.querySelectorAll('.citrus_pureBites_carousel-indicators span')[activeSlide].classList.add('active');
-            };
-
-            function slideToNext(){
-                if(direction === 1){
-                    direction = -1;
-                    citrus_pureBites_carouselInner.prepend(citrus_pureBites_carouselInner.lastElementChild);
-                };
-                
-                citrus_pureBites_carousel.style.justifyContent = 'flex-start';
-                citrus_pureBites_carouselInner.style.transform = `translateX(-${step}%)`;
-            };
-
-            function slideToPrev(){
-                if(direction === -1){
-                    direction = 1;
-                    citrus_pureBites_carouselInner.append(citrus_pureBites_carouselInner.firstElementChild);
-                };
-                citrus_pureBites_carousel.style.justifyContent = 'flex-end'
-                citrus_pureBites_carouselInner.style.transform = `translateX(${step}%)`;
-            };
-
-            function loop(status){
-                if(status === true){
-                    time = setInterval(()=>{
-                        slideToNext();
-                    },interval);
-                }else{
-                    clearInterval(time);
-                }
-            }
-
-
             // start child tab for Cat js //
         </script>
     </body>
