Meta descriptions added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
         <title>PureBites | Petco</title>
-        <meta name="description" content="Shop ConairPro grooming tools at Petco.com to keep your pets clean and well-manicured at home." />
+        <meta name="description" content="Shop PureBites at Petco.com for recipes made fresh and pure with simple, natural ingredients that pets love." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
         <!-- Stylesheet -->
