Alt text update for cat nav

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                                 <span>Shop Dog</span>
                             </div>
                             <div class="citrus_purebites_paren_list MiCS_cat_best_tab_item_citrus_purebites" onclick="filterBestCat('citrus_purebitescat_dry_citrus22')">
-                                <img class="citrus_purebits_mobile_hide" src="assets/images/cat.png" alt="A cat with their cat reaching out." />
-                                <img class="citrus_purebits_desktop_hide" src="assets/images/cat-mobile.png" alt="A cat with their cat reaching out." />
+                                <img class="citrus_purebits_mobile_hide" src="assets/images/cat.png" alt="A cat with their paw reaching out." />
+                                <img class="citrus_purebits_desktop_hide" src="assets/images/cat-mobile.png" alt="A cat with their paw reaching out." />
                                 <span>Shop Cat</span>
                             </div>
                         </div>
