shop all button link updated

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 <span>Two paws up for PureBites</span>
                                 <p>Give your dog or cat PureBites to support a happy, wholesome future.</p>
                                 <div class="citrus_purebits_common-slider-btn">
-                                    <a href="#">SHOP All</a>
+                                     <a "/shop/en/petcostore" manual_cm_sp="sponsoredbrandpage:purebites:twopawsup:1:giveyourdog:shopnow" onclick="clickTrackLink(this);" href="https://www.petco.com/shop/en/petcostore/brand/purebites">SHOP All</a>
                                 </div>
                             </div>
                         </div>
